--- a/styles/main.css
+++ b/styles/main.css
@@ -98,6 +98,7 @@ nav {
   text-align: center;
   color: #fff;
   padding-top: 40px;
+  background-attachment: fixed;
 }
 
 .banner h2 {
@@ -114,46 +115,45 @@ nav {
 **************************/
 .section-heading {
   text-align: left;
-  margin: 18px 0 5px;
   font-size: 2.5em;
   color: #66717E;
 }
 
 .primary,
 .secondary,
-.photo-shuffle {
-  margin-top: 2.4em;
+.tertiary {
+  /* margin-top: 0.8em; */
+  padding: 100px 0;
+  /* height: 700px; */
 }
 
-main img {
-  border-radius: 3%;
-  /*height: 500px;*/
+.home-card {
+  background: #FAFAFA;
+}
+/****** Support Banners ******/
+.support-banner.play {
+  background-image: url('../img/yoshi-play.jpg');
 }
 
-/****** photo shuffle ******/
-.card img {
-  border-radius: 0;
+.support-banner.sleep {
+  background-image: url('../img/pepper-sleep.jpg');
 }
 
-.photo-shuffle {
-  border-top: 1px solid #C0603F;
-  padding-top: 80px;
-}
-
-h3 {
-  font-size: 3em;
-  font-weight: 300;
+.support-banner {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   text-align: center;
-  vertical-align: middle;
-  padding: 15% 0;
-}
-
-.card h3 {
-  background: #C0603F;
-}
-
-.card img, .card h3 {
+  color: #fff;
+  padding-top: 40px;
+  background-attachment: fixed;
   height: 400px;
+  position: relative;
+}
+
+.support-banner h2 {
+  font-size: 6rem;
+  padding: 70px 0;
 }
 /**************************
 *FOOTER
@@ -227,17 +227,6 @@ footer {
   .section-heading {
     font-size: 2em;
   }
-
-  /****** photo shuffle ******/
-  .card :first-child {
-    float: left;
-    width: 50%;
-  }
-  .card :last-child {
-    float: left;
-    width: 50%;
-    border-radius: 0;
-  }
 }
 
 @media screen and (min-width: 1025px) {
@@ -283,5 +272,16 @@ footer {
   .main-content img {
     max-width: 40%;
   }
+}
 
+@media screen and (min-width: 1100px) {
+  /*** home support banners ***/
+  .support-banner h2 {
+    font-size: 5rem;
+    padding: 115px 0;
+  }
+
+  .support-banner {
+    height: 500px;
+  }
 }
